--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">SunnyWeather</string>
     <string name="inputAddress">输入地址</string>
+    <string name="forecast">预报</string>
+    <string name="lifeIndex">生活指数</string>
+    <string name="cold">感冒</string>
+    <string name="clothes">穿衣</string>
+    <string name="ultravioletLight">实时紫外线</string>
+    <string name="carWash">洗车</string>
 </resources>
